fix: update navbar alignment classes and card status attributes for consistency

--- a/core/scss/layout/_navbar.scss
+++ b/core/scss/layout/_navbar.scss
@@ -160,7 +160,8 @@ Navbar
         &.navbar-vertical {
           box-shadow: inset calc(-1 * var(--#{$prefix}navbar-border-width)) 0 0 0 var(--#{$prefix}navbar-border-color);
 
-          &.navbar-right {
+          &.navbar-right,
+          &.navbar-end {
             box-shadow: inset calc(1 * var(--#{$prefix}navbar-border-width)) 0 0 0 var(--#{$prefix}navbar-border-color);
           }
         }
@@ -172,7 +173,8 @@ Navbar
           }
         }
 
-        &.navbar-vertical.navbar-right {
+        &.navbar-vertical.navbar-right,
+        &.navbar-vertical.navbar-end {
           ~ .navbar,
           ~ .page-wrapper {
             margin-left: 0;
@@ -322,7 +324,8 @@ Navbar vertical
             overflow-y: scroll;
             padding: 0;
 
-            &.navbar-right {
+            &.navbar-right,
+            &.navbar-end {
               left: auto;
               right: 0;
             }
@@ -364,7 +367,8 @@ Navbar vertical
               }
             }
 
-            &.navbar-right ~ .page {
+            &.navbar-right ~ .page,
+            &.navbar-end ~ .page {
               padding-left: 0;
               padding-right: $sidebar-width;
             }
